--- a/redis-operator/charts/helm/redis-operator/values.yaml
+++ b/redis-operator/charts/helm/redis-operator/values.yaml
@@ -27,7 +27,7 @@ securityContext:
 imagePullPolicy: Always
 
 operator:
-  dockerImage: ghcr.io/netcracker/qubership-redis-operator:feature_initial
+  dockerImage: ghcr.io/netcracker/qubership-redis-operator:main
   initImage: to_replace
   priorityClassName: ""
   resources:
@@ -149,7 +149,7 @@ redis:
 
 monitoringAgent:
   install: true
-  dockerImage: ghcr.io/netcracker/qubership-redis-monitoring-agent:feature_initial
+  dockerImage: ghcr.io/netcracker/qubership-redis-monitoring-agent:main
   priorityClassName: ""
   nodeLabels:
   resources:
@@ -198,7 +198,7 @@ disasterRecovery:
 
 robotTests:
   install: false
-  dockerImage: ghcr.io/netcracker/qubership-redis-tests:feature_initial
+  dockerImage: ghcr.io/netcracker/qubership-redis-tests:main
   priorityClassName: ""
   tags:
   nodeLabels:
