--- a/redis-operator/charts/helm/redis-operator/values.yaml
+++ b/redis-operator/charts/helm/redis-operator/values.yaml
@@ -4,7 +4,6 @@
 #
 
 DEPLOY_W_HELM: true
-ESCAPE_SEQUENCE: "true"
 name: dbaas-redis-service
 global:
   profile: ""
@@ -56,7 +55,7 @@ dbaas:
     address: "http://dbaas-aggregator.dbaas:8080"
     physicalDatabaseIdentifier: "redis"
     physicalDatabaseLabels:
-    dbaasAggregatorRegistrationAddress: "http://dbaas-aggregator.dbaas-core:8080"
+    dbaasAggregatorRegistrationAddress: "http://dbaas-aggregator.dbaas:8080"
   tls:
     dbaasAdapterCASecretName: dbaas-adapter-certificate
     duration: 365
@@ -149,7 +148,7 @@ redis:
     maxclients: "50000"
 
 monitoringAgent:
-  install: false
+  install: true
   dockerImage: ghcr.io/netcracker/qubership-redis-monitoring-agent:main
   priorityClassName: ""
   nodeLabels:
@@ -194,8 +193,8 @@ vaultRegistration:
       memory: 64Mi
 
 disasterRecovery:
-  enabled: true
-  replicatorNamespace: replicator-dc2
+  enabled: false
+  replicatorNamespace: replicator-dc1
 
 robotTests:
   install: false
