--- a/redis-operator/charts/helm/redis-operator/templates/secrets/monitoring_secrets.yaml
+++ b/redis-operator/charts/helm/redis-operator/templates/secrets/monitoring_secrets.yaml
@@ -2,6 +2,6 @@
   {{- if not (eq .Values.monitoringAgent.metricCollector "prometheus") }}
 {{- $data := .Values.monitoringAgent.influxDB }}
 {{- $_ := set $data "username" $data.user }}
-{{template "nosql.core.secret.external" (dict "values" . "vlt" .Values.vaultRegistration "secret" $data )}}
+{{template "nosql.core.secret.external" (dict "values" . "vltEnabled" false "vltPath" "" "secret" $data )}}
   {{end}}
 {{end}}
