--- a/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
+++ b/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
@@ -86,6 +86,8 @@ spec:
                         type: string
                       username:
                         type: string
+                      vaultPasswordPath:
+                        type: string
                     type: object
                   install:
                     type: boolean
@@ -134,6 +136,8 @@ spec:
                       secretName:
                         type: string
                       user:
+                        type: string
+                      vaultPasswordPath:
                         type: string
                     type: object
                   install:
@@ -420,11 +424,68 @@ spec:
                   tlsPort:
                     type: integer
                 type: object
+              vaultRegistration:
+                properties:
+                  cloudName:
+                    type: string
+                  cloudURL:
+                    type: string
+                  dockerImage:
+                    type: string
+                  enabled:
+                    type: boolean
+                  initContainerResources:
+                    properties:
+                      claims:
+                        items:
+                          properties:
+                            name:
+                              type: string
+                          required:
+                            - name
+                          type: object
+                        type: array
+                        x-kubernetes-list-map-keys:
+                          - name
+                        x-kubernetes-list-type: map
+                      limits:
+                        additionalProperties:
+                          anyOf:
+                            - type: integer
+                            - type: string
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        type: object
+                      requests:
+                        additionalProperties:
+                          anyOf:
+                            - type: integer
+                            - type: string
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        type: object
+                    type: object
+                  method:
+                    type: string
+                  namespacedPath:
+                    type: string
+                  path:
+                    type: string
+                  role:
+                    type: string
+                  rotationPeriod:
+                    type: integer
+                  token:
+                    type: string
+                  url:
+                    type: string
+                type: object
               waitTimeout:
                 type: integer
             required:
             - robotTests
             - serviceAccountName
+            - vaultRegistration
             type: object
           status:
             properties:
