--- a/redis-operator/charts/helm/redis-operator/values.yaml
+++ b/redis-operator/charts/helm/redis-operator/values.yaml
@@ -85,7 +85,7 @@ redis:
       ca_crt:
   password: redis
   secretName: redis-credentials
-  dockerImage: "redis:7.4.5-alpine"
+  dockerImage: "redis:8.0.3-alpine"
   priorityClassName: ""
   nodeLabels:
   parameters:
@@ -104,7 +104,7 @@ redis:
     port: "6379"
     tcp-backlog: "511"
     timeout: "0"
-    tcp-keepalive: "300"
+    tcp-keepalive: "30"
     daemonize: "no"
     supervised: "no"
     loglevel: "notice"
@@ -122,22 +122,23 @@ redis:
     auto-aof-rewrite-percentage: "100"
     auto-aof-rewrite-min-size: "64mb"
     aof-load-truncated: "yes"
+    rdb-save-incremental-fsync: "yes"
     lua-time-limit: "5000"
     cluster-enabled: "no"
     slowlog-log-slower-than: "-1"
     slowlog-max-len: "128"
     latency-monitor-threshold: "0"
     notify-keyspace-events: "\"\""
-    hash-max-ziplist-entries: "512"
-    hash-max-ziplist-value: "64"
-    list-max-ziplist-size: "-2"
+    hash-max-listpack-entries: "512"
+    hash-max-listpack-value: "64"
+    list-max-listpack-size: "-2"
     list-compress-depth: "0"
     set-max-intset-entries: "512"
-    zset-max-ziplist-entries: "128"
-    zset-max-ziplist-value: "64"
+    zset-max-listpack-entries: "128"
+    zset-max-listpack-value: "64"
     hll-sparse-max-bytes: "3000"
     activerehashing: "yes"
-    client-output-buffer-limit: "normal 0 0 0\nclient-output-buffer-limit slave 256mb 64mb 60\nclient-output-buffer-limit pubsub 32mb 8mb 60"
+    client-output-buffer-limit: "normal 0 0 0\nclient-output-buffer-limit replica 256mb 64mb 60\nclient-output-buffer-limit pubsub 32mb 8mb 60"
     hz: "10"
     aof-rewrite-incremental-fsync: "yes"
     maxmemory: 200mb
