--- a/redis-operator/Dockerfile
+++ b/redis-operator/Dockerfile
@@ -33,7 +33,8 @@ COPY --from=builder /src/charts/helm/redis-operator/ helm-templates/redis-operat
 COPY build/bin /usr/local/bin
 
 RUN apk update \
-    && apk add --no-cache curl=8.16.0 \
+    && apk add --no-cache curl \
+    && apk upgrade curl \
     && rm -rf /var/cache/apk/*
 
 RUN chmod +x /usr/local/bin/entrypoint \
