fix: add required and recommended k8s labels

--- a/redis-operator/charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
+++ b/redis-operator/charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
@@ -152,6 +152,8 @@ spec:
                 required:
                 - install
                 type: object
+              deploymentSessionId:
+                type: string
               deploymentVersion:
                 type: string
               imagePullPolicy:
