--- a/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
+++ b/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
@@ -113,6 +113,8 @@ spec:
                 required:
                 - install
                 type: object
+              deploymentSessionId:
+                type: string
               deploymentVersion:
                 type: string
               imagePullPolicy:
