fix: revert crd group
(cherry picked from commit c4b76bb5db33914857eaa51c2ab028da540d3c3a)

--- a/redis-operator/Makefile
+++ b/redis-operator/Makefile
@@ -28,8 +28,8 @@ BUNDLE_METADATA_OPTS ?= $(BUNDLE_CHANNELS) $(BUNDLE_DEFAULT_CHANNEL)
 # This variable is used to construct full image tags for bundle and catalog images.
 #
 # For example, running 'make bundle-build bundle-push catalog-build catalog-push' will build and push both
-# qubership.org/redis-oper-bundle:$VERSION and qubership.org/redis-oper-catalog:$VERSION.
-IMAGE_TAG_BASE ?= qubership.org/redis-oper
+# netcracker.com/redis-oper-bundle:$VERSION and netcracker.com/redis-oper-catalog:$VERSION.
+IMAGE_TAG_BASE ?= netcracker.com/redis-oper
 
 # BUNDLE_IMG defines the image:tag used for the bundle.
 # You can use it as an arg. (E.g make bundle-build BUNDLE_IMG=<some-registry>/<project-name-bundle>:<tag>)
@@ -89,9 +89,9 @@ help: ## Display this help.
 .PHONY: manifests
 manifests: controller-gen ## Generate WebhookConfiguration, ClusterRole and CustomResourceDefinition objects.
 	$(CONTROLLER_GEN) rbac:roleName=manager-role crd webhook paths="./..." output:crd:artifacts:config=charts/helm/redis-operator/crds
-	mv charts/helm/redis-operator/crds/qubership.org_dbaasredisadapters.yaml charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
+	mv charts/helm/redis-operator/crds/netcracker.com_dbaasredisadapters.yaml charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
 	$(CONTROLLER_GEN) rbac:roleName=manager-role crd:crdVersions=v1beta1,maxDescLen=0 webhook paths="./..." output:crd:artifacts:config=charts/helm/redis-operator/legacy_crd
-	mv charts/helm/redis-operator/legacy_crd/qubership.org_dbaasredisadapters.yaml charts/helm/redis-operator/legacy_crd/crd.yaml
+	mv charts/helm/redis-operator/legacy_crd/netcracker.com_dbaasredisadapters.yaml charts/helm/redis-operator/legacy_crd/crd.yaml
 
 .PHONY: generate
 generate: controller-gen ## Generate code containing DeepCopy, DeepCopyInto, and DeepCopyObject method implementations.
