--- a/redis-operator/charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
+++ b/redis-operator/charts/helm/redis-operator/crds/k8s_1.22_crd.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
-  name: dbaasredisadapters.qubership.org
+  name: dbaasredisadapters.netcracker.com
 spec:
-  group: qubership.org
+  group: netcracker.com
   names:
     kind: DbaasRedisAdapter
     listKind: DbaasRedisAdapterList
