--- a/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
+++ b/redis-operator/charts/helm/redis-operator/legacy_crd/crd.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.2
   creationTimestamp: null
-  name: dbaasredisadapters.qubership.org
+  name: dbaasredisadapters.netcracker.com
 spec:
-  group: qubership.org
+  group: netcracker.com
   names:
     kind: DbaasRedisAdapter
     listKind: DbaasRedisAdapterList
