--- a/redis-operator/charts/helm/redis-operator/templates/role.yaml
+++ b/redis-operator/charts/helm/redis-operator/templates/role.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "redis.defaultLabels" . | nindent 4 }}
 rules:
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - '*'
   verbs:
