--- a/redis-operator/config/crd/bases/netcracker.com_dbaasredisadapters.yaml
+++ b/redis-operator/config/crd/bases/netcracker.com_dbaasredisadapters.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
-  name: dbaasredisadapters.qubership.org
+  name: dbaasredisadapters.netcracker.com
 spec:
-  group: qubership.org
+  group: netcracker.com
   names:
     kind: DbaasRedisAdapter
     listKind: DbaasRedisAdapterList
