--- a/redis-operator/config/crd/kustomization.yaml
+++ b/redis-operator/config/crd/kustomization.yaml
@@ -2,7 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/qubership.org_dbaasredisadapters.yaml
+- bases/netcracker.com_dbaasredisadapters.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
