--- a/redis-operator/config/crd/patches/webhook_in_netcracker.com_dbaasredisadapters.yaml
+++ b/redis-operator/config/crd/patches/webhook_in_netcracker.com_dbaasredisadapters.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: dbaasredisadapters.qubership.org
+  name: dbaasredisadapters.netcracker.com
 spec:
   conversion:
     strategy: Webhook
