--- a/redis-operator/config/rbac/netcracker.com_dbaasredisadapter_editor_role.yaml
+++ b/redis-operator/config/rbac/netcracker.com_dbaasredisadapter_editor_role.yaml
@@ -1,26 +1,30 @@
-# permissions for end users to view dbaasredisadapters.
+# permissions for end users to edit dbaasredisadapters.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: dbaasredisadapter-viewer-role
+    app.kubernetes.io/instance: dbaasredisadapter-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: redis-oper
     app.kubernetes.io/part-of: redis-oper
     app.kubernetes.io/managed-by: kustomize
-  name: dbaasredisadapter-viewer-role
+  name: dbaasredisadapter-editor-role
 rules:
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - dbaasredisadapters
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - dbaasredisadapters/status
   verbs:
