--- a/redis-operator/config/rbac/role.yaml
+++ b/redis-operator/config/rbac/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - dbaasredisadapters
   verbs:
@@ -17,13 +17,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - dbaasredisadapters/finalizers
   verbs:
   - update
 - apiGroups:
-  - qubership.org
+  - netcracker.com
   resources:
   - dbaasredisadapters/status
   verbs:
