--- a/redis-operator/config/samples/kustomization.yaml
+++ b/redis-operator/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- qubership.org_v1_dbaasredisadapter.yaml
+- netcracker.com_v1_dbaasredisadapter.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
